--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
+
+
+:root {
+  --dark-red: #903040;
+  --red: #cd4451;
+  --light-red: #ffaab8;
+  --pale-red: #ffd4dc;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.main {
+  font-family: 'Poppins', sans-serif;
+  padding: 30px;
+  margin: 0 auto;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  width: 80%;
+  max-width: 600px;
+  min-height: 80vh;
+  background-color: var(--pale-red);
+  border-radius: 10px;
+  border: 1px solid var(--dark-red);
+  box-shadow: 5px 5px 20px #90304044;
+  font-weight: 500;
+}
+
+h1 {
+  font-family: 'Fascinate', cursive;
+  margin: 0;
   text-align: center;
+  color: var(--dark-red);
+}
+.header-container {
+  /*display: flex;*/
+  position:relative; 
+}
+.header-container img {
+  position: absolute;left:0;
+  height: 20px;
+ 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--light-red);
+  border: 2px solid #cd445144;
+  border-radius: 3px;
+  font-weight: 500;
+  box-shadow: 2px 2px 10px #cd445188;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  font-family: 'Poppins', sans-serif;
+  background-color: transparent;
+  border: 1px solid #90304066;
+  outline: none;
+  border-radius: 3px;
+  font-weight: 500;
+  box-shadow: 2px 2px 10px #cd445188;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input:focus {
+  box-shadow: 0 0 10px #cd4451;
+  border: 1px solid #90304066;
+}
+
+.input-item {
   display: flex;
-  flex-direction: column;
+  margin-top: 30px;
+}
+
+.input-item input {
+  padding: 10px;
+  flex-grow: 1;
+  height: 50px;
+}
+.input-item button {
+  flex-basis: 100px;
+  height: 50px;
+  margin-left: 20px;
+}
+
+.list-container {
+  margin-top: 20px;
+  color: var(--dark-red);
+  height: 100%;
+  min-height: 50vh;
+}
+
+.item {
+  padding: 10px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  height: 30px;
+  min-width: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.check-btn {
+  margin-right: 10px;
+}
+
+.item-value-container {
+  flex-grow: 1;
+  margin-right: 5px;
+}
+
+.item-value {
+  display: flex;
+  align-items: center;
+  
+}
+
+.item-value input, .item-value div {
+  flex-grow: 1;
+  word-break: break-word;
+    
+}
+
+.item-value button {
+  flex-basis: 50px;
+  height: 30px;
+}
+.item-value div {
+border: #903040;
+background-color: #ffaab8 ;
+margin-right: 5px;
+height: 30px ;
+}
+.item button {
+  margin-left: 10px;
+}
+
+/* addition */
+
+.checked {
+  text-align: center;
+  padding: 0;
+  background-color: yellow;
+}
+
+.finished {
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
 }
